@@ -14,6 +14,10 @@ TSDSD-443:	PDM Update & DB Patch: Rename of dwh_etl_state_register to dwh_etl_st
 		dwh_psa_obo
 		dwh_dsa_obo
 
+*	Renamed PDI transformation tr_etl_state_register-update to:
+
+		tr_etl_state_register_source-update
+
 *	The following PDM documents have been updated to reflect these changes:
 
 		<still to do - work in progress>
